create-deployment-during-signup-ci-cd/k8s/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SITE_NAME}-app
  namespace: ${MAMAD_NAMESPACE}
  labels:
    app: ${SITE_NAME}-app
spec:
  replicas: 2
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: ${SITE_NAME}-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ${SITE_NAME}-app
        name: ${SITE_NAME}-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/cloud-container-g2
                    operator: In
                    values:
                      - "true"
      containers:
        - name: ${SITE_NAME}-app
          image: docker.io/$DOCKERHUB_USER/${SITE_NAME}:${CI_COMMIT_SHA}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: "1000m"
              memory: "2000Mi"
              ephemeral-storage: "500Mi"
            requests:
              cpu: "500m"
              memory: "1000Mi"
              ephemeral-storage: "500Mi"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      tolerations:
        - key: role
          operator: Equal
          value: cloud-container-g2
          effect: NoSchedule
---
apiVersion: v1
kind: Service
metadata:
  name: ${SITE_NAME}-service
  namespace: ${MAMAD_NAMESPACE}
  labels:
    app: ${SITE_NAME}-app
spec:
  type: ClusterIP
  selector:
    app: ${SITE_NAME}-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
