create-deployment-during-signup-ci-cd/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${SITE_NAME}-ingress
  namespace: ${MAMAD_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ${SITE_NAME}-9ddcd5133c-${MAMAD_NAMESPACE}.apps.ir-central1.arvancaas.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${SITE_NAME}-service
                port:
                  number: 80
